# ai-chatbot-mcp

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  API_CLI_README.md  CLI_MANAGEMENT_SYSTEM.md  CONFIG_CHANGES.md  DEVELOPMENT.md  Dockerfile  Dockerfile.dev  IMPLEMENTATION_EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  LANGCHAIN_MIGRATION_GUIDE.md  MIGRATION_ROADMAP.md  PERFORMANCE_IMPROVEMENTS.md  PROJECT_STRUCTURE.md  README.md  SDK_USAGE_ANALYSIS.md  TOOL_HANDLING_MODES.md  ai-chatbot-gui.desktop  alembic.ini  api_manage.py  chatbot  chatbot-gui  code_quality_report.txt  demo.db  demo_api_cli.py  demo_fixes.py  docker-compose.dev.yml  manage  manage.py  openapi.json  project_structure.md  pyproject.toml  pytest.ini  requirements.txt  setup-frontend.sh  shared_models.py  test.db  test_api_cli.py  (+5 more)
.github/: copilot-instructions.md
api_cli/: __init__.py  analytics.py  auth.py  base.py  conversations.py  database.py  documents.py  mcp.py  profiles.py  prompts.py  tasks.py  users.py
app/: __init__.py  config.py  database.py  dependencies.py  main.py
cli/: __init__.py  analytics.py  auth.py  base.py  conversations.py  core.py  database.py  documents.py  gui.py  jobs.py  manage.py  mcp.py  profiles.py  prompts.py  tasks.py  users.py
client/: .env.example  README.md  __init__.py  ai_chatbot_sdk.py  chatbot.py  config.py  demo.py  gui_chatbot.py
dashboard/: README.md  package-lock.json  package.json
docs/: API_DOCUMENTATION.md  API_EXAMPLES.md  API_RESPONSE_PATTERNS.md  MLID_SYSTEM.md  PRODUCTION_DEPLOYMENT.md  duplicate_api_analysis_report.md  duplicate_api_implementation_guide.md  duplicate_api_summary.md  frontend-openapi-validation.md  jobs-management.md  logging-refactoring.md  openapi.json  project_structure.md  sdk-apiresponse-fix.md  sdk-response-fixes.md  sdk_api_analysis_report.md  streaming-chat-fix.md
examples/: tool_handling_demo.py
frontend/: FRONTEND_README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
migrations/: 001_add_registry_models.py  env.py
scripts/: __init__.py  analyze_sdk_api_usage.py  check_quality.py  code_quality_check.py  dev_setup.py  duplicate_api_summary.py  example_usage.py  generate_openapi.py  generate_openapi_minimal.py  generate_openapi_simple.py  manage.py  manage_simple.py  setup_registry_data.py  startup.py  verify_mlid_migration.py  verify_tool_handling.py
sdk/: README.md  ai_chatbot_sdk.py  example.ts  package-lock.json  package.json  tsconfig.json
shared/: __init__.py
tests/: __init__.py  conftest.py  test_api_consolidation.py  test_auth.py  test_background_processor_isolation.py  test_chatbot_fixes.py  test_config.py  test_enhanced_chatbot.py  test_enhanced_processing.py  test_health.py  test_llm_profile_refactor.py  test_llm_profile_registry.py  test_mcp_registry.py  test_mlid.py  test_users.py  (+6 more)
(+238 files in other folders)
